--- a/index.html
+++ b/index.html
@@ -23,8 +23,23 @@
     <header>
         <div class="container">
             <h1>Swati Kushwaha</h1>
-            <nav>
+            <!-- <nav>
                 <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="certificates.html">Certificates</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://github.com/SwatiKushwaha24" target="_blank"><i class="fab fa-github"></i></a></li>
+                </ul>
+            </nav> -->
+            <nav>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+                <ul class="nav-menu">
                     <li><a href="#about">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="#resume">Resume</a></li>
