--- a/certificates.html
+++ b/certificates.html
@@ -21,8 +21,23 @@
     <header>
         <div class="container">
             <h1>Swati Kushwaha</h1>
-            <nav>
+            <!-- <nav>
                 <ul>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="index.html#resume">Resume</a></li>
+                    <li><a href="certificates.html" class="active">Certificates</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="https://github.com/SwatiKushwaha24" target="_blank"><i class="fab fa-github"></i></a></li>
+                </ul>
+            </nav> -->
+            <nav>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+                <ul class="nav-menu">
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="index.html#resume">Resume</a></li>
@@ -77,5 +92,6 @@
             <p>&copy; 2023 Forest Portfolio. All rights reserved.</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
