--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <!-- Resume Section -->
     <section id="resume" class="section">
-<!--         <div class="container">
+        <div class="container">
             <h2>My Resume</h2>
             <div class="resume-container">
                 <iframe src="assets/SwatiKushwaha Resume.pdf" class="resume-pdf"></iframe>
@@ -86,19 +86,6 @@
                     <i class="fas fa-download"></i> Download PDF
                 </a>
             </div>
-        </div> -->
-        <h2>My Resume</h2>
-        <div class="resume-container">
-            <iframe 
-            src="assets/SwatiKushwaha Resume.pdf" 
-            class="resume-pdf"
-            frameborder="0" 
-            allowfullscreen>
-            </iframe>
-
-            <a href="assets/SwatiKushwaha Resume.pdf" download class="btn download-btn">
-            <i class="fas fa-download"></i> Download PDF
-            </a>
         </div>
     </section>
 
