--- a/projects/mapzine.html
+++ b/projects/mapzine.html
@@ -293,7 +293,7 @@
                     <a href="https://github.com/SwatiKushwaha24/Mapzine/blob/main/volcano_map.py" class="btn" target="_blank">
                         <i class="fab fa-github"></i> Source Code
                     </a>
-                    <a href="https://swatikushwaha24.github.io/SwatiKushwaha.github.io/Mapzine.html" class="btn" target="_blank">
+                    <a href="https://swatikushwaha24.github.io/Mapzine.github.io/" class="btn" target="_blank">
                         <i class="fas fa-external-link-alt"></i> Explore Live Map
                     </a>
                 </div>
