--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Add this before </head> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
 <style>
   /* PDF Viewer Custom Styles */
   #pdf-viewer-container {
@@ -19,6 +21,7 @@
     margin-bottom: 1rem;
   }
 </style>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
