--- a/projects.html
+++ b/projects.html
@@ -1,32 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Add this before </head> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
-<style>
-  /* PDF Viewer Custom Styles */
-  #pdf-viewer-container {
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    background: white;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  }
-  
-  #pdf-canvas {
-    width: 100%;
-    border: 1px solid #eee;
-    border-radius: 5px;
-    margin-bottom: 1rem;
-  }
-</style>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swati Kushwaha | Data Science Portfolio</title>
-    <meta name="theme-color" content="#3A5A40">
+    <title>My Projects | Swati Kushwaha</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -41,17 +18,16 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
     <header>
         <div class="container">
             <h1>Swati Kushwaha</h1>
             <!-- <nav>
                 <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="projects.html" class="active">Projects</a></li>
+                    <li><a href="index.html#resume">Resume</a></li>
                     <li><a href="certificates.html">Certificates</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                     <li><a href="https://github.com/SwatiKushwaha24" target="_blank"><i class="fab fa-github"></i></a></li>
                 </ul>
             </nav> -->
@@ -62,89 +38,80 @@
                     <span class="bar"></span>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="projects.html" class="active">Projects</a></li>
+                    <li><a href="index.html#resume">Resume</a></li>
                     <li><a href="certificates.html">Certificates</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                     <li><a href="https://github.com/SwatiKushwaha24" target="_blank"><i class="fab fa-github"></i></a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Rest of the document remains EXACTLY the same -->
-    <!-- Hero Section -->
-    <section id="hero">
+    <section id="projects" class="section">
         <div class="container">
-            <h2>Data Science Portfolio</h2>
-            <p>Empowering Businesses with Data Solutions</p>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="section">
-        <div class="container">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Results-driven Data Science professional with expertise in Python, SQL, Tableau, and Power BI, specializing in exploratory data analysis (EDA), predictive modeling, and business intelligence. Proven ability to transform raw data into actionable insights through projects like COVID-19 unemployment trend analysis, interactive dashboards, and NLP-based hate speech detection.</p>
-                    <p>Strong foundation in deep learning (CNN, Transformers) and statistical modeling, complemented by certifications in AI, Business Analytics, and Excel. Passionate about solving real-world problems with data-driven solutions and delivering impactful visual storytelling.</p>
-                </div>
-                <div class="about-image">
-                    <img src="assets/swati.jpg" alt="Your Name" class="profile-img">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Resume Section -->
-    <section id="resume" class="section">
-        <div class="container">
-            <h2>My Resume</h2>
-            <div id="pdf-viewer-container">
-              <canvas id="pdf-canvas"></canvas>
-              <div class="btn-container">  <!-- New container div -->
-                <a href="assets/SwatiKushwaha Resume.pdf" download class="btn download-btn">
-                  <i class="fas fa-download"></i> Download PDF
-                </a>
-              </div>
-            </div>
-          </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="section">
-        <div class="container">
-            <h2>Get In Touch</h2>
-            <div class="contact-content">
-                <div class="contact-info">
-                    <p><i class="fas fa-envelope"></i> swatikushwaha24032003@gmail.com</p>
-                    <p><i class="fas fa-phone"></i> +91-8881803846</p>
-                    <div class="social-links">
-                        <a href="https://github.com/SwatiKushwaha24" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/iamswatikushwaha/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://www.kaggle.com/sylvie24" aria-label="Kaggle"><i class="fab fa-kaggle"></i></a>
+            <h2>All Projects</h2>
+            <div class="projects-grid">
+                <!-- Project 1 -->
+                <div class="project-card">
+                    <img src="assets/Screenshot 2025-04-15 164953.jpg" alt="Mapzine">
+                    <div class="project-content">
+                        <h3>Mapzine</h3>
+                        <p>Mapzine is an interactive web-based map application that visualizes global volcano data alongside population density information.</p>
+                        <a href="projects/mapzine.html" target="_blank" class="btn">View Case Study</a>
                     </div>
                 </div>
-                <form class="contact-form" netlify>
-                    <input type="text" name="name" placeholder="Your Name" required>
-                    <input type="email" name="email" placeholder="Your Email" required>
-                    <textarea name="message" placeholder="Your Message" required></textarea>
-                    <button type="submit" class="btn">Send Message</button>
-                </form>
+                
+                <!-- Project 2 -->
+                <div class="project-card">
+                    <img src="assets/Netflix (1).png" alt="Netflix Dashboard">
+                    <div class="project-content">
+                        <h3>Netflix Dashboard</h3>
+                        <p>This Tableau dashboard provides a comprehensive analysis of Netflix's content library, derived from a dataset containing 6,234 entries.</p>
+                        <a href="projects/netflix-dashboard.html" target="_blank" class="btn">View Case Study</a>
+                    </div>
+                </div>
+                
+                <!-- Project 3 -->
+                <div class="project-card">
+                    <img src="assets/DashboardCallCenter.png" alt="Call Center Dashboard">
+                    <div class="project-content">
+                        <h3>Call Center Dashboard</h3>
+                        <p>This interactive Excel dashboard analyzes the 2020 call center demo dataset from the U.S., providing actionable insights to enhance decision-making and operations.</p>
+                        <a href="projects/call-center-dashboard.html" target="_blank" class="btn">View Case Study</a>
+                    </div>
+                </div>
+
+                <!-- Project 4 -->
+                <div class="project-card">
+                    <img src="assets/—Pngtree—marketing strategy concept businessman shout_7303120.png" alt="Advertising Sales Prediction">
+                    <div class="project-content">
+                        <h3>Advertising Sales Prediction</h3>
+                        <p>This data science project analyzes the relationship between advertising expenditures across different media channels (TV, Radio, Newspaper) and product sales.</p>
+                        <a href="projects/sales_prediction.html" target="_blank" class="btn">View Case Study</a>
+                    </div>
+                </div>
+
+                <!-- Project 5 -->
+                <div class="project-card">
+                    <img src="assets/design-01jrz536n2-1744802408.jpg" alt="Advertising Sales Prediction">
+                    <div class="project-content">
+                        <h3>India Unemployment Rate Analysis (2020)</h3>
+                        <p>This data analysis project examines unemployment trends across Indian states during 2020, with a focus on understanding the impact of COVID-19 lockdown measures.</p>
+                        <a href="projects/unemploymentAnalysis.html" target="_blank" class="btn">View Case Study</a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
             <p>&copy; 2023 Forest Portfolio. All rights reserved.</p>
-            <p class="eco-statement">🌱 Sustainable web design • 0.02g CO₂ per view</p>
         </div>
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
