--- a/projects/mapzine.html
+++ b/projects/mapzine.html
@@ -306,7 +306,7 @@
                 <p>Mapzine is an interactive web-based map application that visualizes global volcano data alongside population density information. Built using Python's Folium library, this project combines geographical data visualization with informative popups to create an engaging educational tool for geology enthusiasts, students, and researchers.</p>
                 
                 <div class="Project Report" style="text-align: center;">
-                    <a href="../assets/Unemployment_Analysis_Report.pdf" class="btn" download="Unemployment_Analysis_Report.pdf">
+                    <a href="../assets/Mapzine Interactive Visualization.pdf" class="btn" download="Mapzine Interactive Visualization Report.pdf">
                         <i class="fas fa-file-code"></i> Download Report (PDF)
                     </a>
                 </div>
