--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div id="pdf-viewer-container">
               <canvas id="pdf-canvas"></canvas>
               <div class="btn-container">  <!-- New container div -->
-                <a href="assets/Swati_Kushwaha_resume (1).pdf" download class="btn download-btn">
+                <a href="assets/Swati's resume.pdf" download class="btn download-btn">
                   <i class="fas fa-download"></i> Download PDF
                 </a>
               </div>
