--- a/projects.html
+++ b/projects.html
@@ -75,16 +75,6 @@
                 
                 <!-- Project 3 -->
                 <div class="project-card">
-                    <img src="assets/DashboardCallCenter.png" alt="Call Center Dashboard">
-                    <div class="project-content">
-                        <h3>Call Center Dashboard</h3>
-                        <p>This interactive Excel dashboard analyzes the 2020 call center demo dataset from the U.S., providing actionable insights to enhance decision-making and operations.</p>
-                        <a href="projects/call-center-dashboard.html" target="_blank" class="btn">View Case Study</a>
-                    </div>
-                </div>
-
-                <!-- Project 4 -->
-                <div class="project-card">
                     <img src="assets/—Pngtree—marketing strategy concept businessman shout_7303120.png" alt="Advertising Sales Prediction">
                     <div class="project-content">
                         <h3>Advertising Sales Prediction</h3>
@@ -93,13 +83,23 @@
                     </div>
                 </div>
 
-                <!-- Project 5 -->
+                <!-- Project 4 -->
                 <div class="project-card">
-                    <img src="assets/design-01jrz536n2-1744802408.jpg" alt="Advertising Sales Prediction">
+                    <img src="assets/design-01jrz536n2-1744802408.jpg" alt="India Unemployment Rate Analysis (2020)">
                     <div class="project-content">
                         <h3>India Unemployment Rate Analysis (2020)</h3>
                         <p>This data analysis project examines unemployment trends across Indian states during 2020, with a focus on understanding the impact of COVID-19 lockdown measures.</p>
                         <a href="projects/unemploymentAnalysis.html" target="_blank" class="btn">View Case Study</a>
+                    </div>
+                </div>
+                
+                <!-- Project 5 -->
+                <div class="project-card">
+                    <img src="assets/DashboardCallCenter.png" alt="Call Center Dashboard">
+                    <div class="project-content">
+                        <h3>Call Center Dashboard</h3>
+                        <p>This interactive Excel dashboard analyzes the 2020 call center demo dataset from the U.S., providing actionable insights to enhance decision-making and operations.</p>
+                        <a href="projects/call-center-dashboard.html" target="_blank" class="btn">View Case Study</a>
                     </div>
                 </div>
 
