--- a/projects/mapzine.html
+++ b/projects/mapzine.html
@@ -290,7 +290,7 @@
             <div class="project-header">
                 <h1>Mapzine: Interactive Volcano Map</h1>
                 <div class="project-links">
-                    <a href="https://github.com/SwatiKushwaha24/Mapzine/blob/main/volcano_map.py" class="btn" target="_blank">
+                    <a href="https://github.com/SwatiKushwaha24/Mapzine.github.io/blob/main/volcano_map.py" class="btn" target="_blank">
                         <i class="fab fa-github"></i> Source Code
                     </a>
                     <a href="https://swatikushwaha24.github.io/Mapzine.github.io/Mapzine.html" class="btn" target="_blank">
