--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
                     <li><a href="certificates.html">Certificates</a></li>
                     <li><a href="Research&Articles.html">Research & Articles</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="https://github.com/SwatiKushwaha24" target="_blank"><i class="fab fa-github"></i></a></li>
                 </ul>
             </nav>
         </div>
@@ -126,6 +125,7 @@
                         <a href="https://github.com/SwatiKushwaha24" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/iamswatikushwaha/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                         <a href="https://www.kaggle.com/sylvie24" aria-label="Kaggle"><i class="fab fa-kaggle"></i></a>
+                        <a href="https://medium.com/@swatikushwaha24032003" aria-label="Medium"><i class="fab fa-medium"></i></a>
                     </div>
                 </div>
                 <form class="contact-form" netlify>
