--- a/Research&Articles.html
+++ b/Research&Articles.html
@@ -41,8 +41,8 @@
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="index.html#resume">Resume</a></li>
-                    <li><a href="certificates.html" class="active">Certificates</a></li>
-                    <li><a href="Research&Articles.html">Research & Articles</a></li>
+                    <li><a href="certificates.html">Certificates</a></li>
+                    <li><a href="Research&Articles.html" class="active">Research & Articles</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </nav>
