--- a/projects/sales_prediction.html
+++ b/projects/sales_prediction.html
@@ -310,8 +310,8 @@
                     <li><a href="../projects.html">Projects</a></li>
                     <li><a href="../index.html#resume">Resume</a></li>
                     <li><a href="../certificates.html">Certificates</a></li>
+                    <li><a href="../Research&Articles.html">Research & Articles</a></li>
                     <li><a href="../index.html#contact">Contact</a></li>
-                    <li><a href="https://github.com/SwatiKushwaha24" target="_blank"><i class="fab fa-github"></i></a></li>
                 </ul>
             </nav>
         </div>
