--- a/Research&Articles.html
+++ b/Research&Articles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Certificates | Swati Kushwaha</title>
+    <title>My Research & Articles | Swati Kushwaha</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -51,37 +51,38 @@
 
     <section id="projects" class="section">
         <div class="container">
-            <h2>My Certificates</h2>
+            <h2>My Articles</h2>
             <div class="projects-grid">
-                <!-- Certificate 1 -->
+                <!-- Article 1 -->
                 <div class="project-card">
                     <img src="assets/icons8-hp-logo-480.png" alt="HP logo">
                     <div class="project-content">
-                        <h3> Sales Forecasting</h3>
-                        <p>Data Analytics, Market Research, Sales Modeling, Microsoft Excel</p>
-                        <a href="https://drive.google.com/file/d/19ST4T0HXt6nKIYVqudPXW92lymghZxkJ/view?usp=sharing" target="_blank" class="btn">View Certificate</a>
+                        <h3>How I Stumbled (and Googled) My Way Into Data Science
+</h3>
+                        <p>If you’re also floating around in the vast ocean of CSVs, models, and “what even is EDA?” — this article is for you.</p>
+                        <a href="https://medium.com/@swatikushwaha24032003/how-i-stumbled-and-googled-my-way-into-data-science-4be227d8bf5c" target="_blank" class="btn">View Certificate</a>
                     </div>
                 </div>
                 
                 <!-- Certificate 2 -->
-                <div class="project-card">
+<!--                 <div class="project-card">
                     <img src="assets/icons8-ibm-logo-480.png" alt="IBM logo">
                     <div class="project-content">
                         <h3> Artificial Intelligence Analyst</h3>
                         <p>Machine learning, IBM Watson, NLP, Chatbots, Computer vision</p>
                         <a href="https://drive.google.com/file/d/1b2FYOr1q14RDePpakBKMllcsvbhyKUXE/view?usp=drivesdk" target="_blank" class="btn">View Certificate</a>
                     </div>
-                </div>
+                </div> -->
                 
                 <!-- Certificate 3 -->
-                <div class="project-card">
+<!--                 <div class="project-card">
                     <img src="assets/SkillUp_Logo.jpg" alt=" logo">
                     <div class="project-content">
                         <h3> Business Analytics with Excel</h3>
                         <p>Data cleaning, Pivot tables, Dashboards, MACROS</p>
                         <a href="https://certificates.simplicdn.net/share/4490759_1693770610.pdf" target="_blank" class="btn">View Certificate</a>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
