--- a/Research&Articles.html
+++ b/Research&Articles.html
@@ -55,12 +55,12 @@
             <div class="projects-grid">
                 <!-- Article 1 -->
                 <div class="project-card">
-                    <img src="assets/icons8-hp-logo-480.png" alt="HP logo">
+                    <img src="assets/6960655.jpg" alt="Vector Image">
                     <div class="project-content">
                         <h3>How I Stumbled (and Googled) My Way Into Data Science
 </h3>
                         <p>If you’re also floating around in the vast ocean of CSVs, models, and “what even is EDA?” — this article is for you.</p>
-                        <a href="https://medium.com/@swatikushwaha24032003/how-i-stumbled-and-googled-my-way-into-data-science-4be227d8bf5c" target="_blank" class="btn">View Certificate</a>
+                        <a href="https://medium.com/@swatikushwaha24032003/how-i-stumbled-and-googled-my-way-into-data-science-4be227d8bf5c" target="_blank" class="btn">Read Article</a>
                     </div>
                 </div>
                 
