--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swati Kushwaha | Data Science Portfolio</title>
+    <title>Swati Kushwaha | Creative Work with a Data Core</title>
     <meta name="theme-color" content="#3A5A40">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -77,8 +77,10 @@
     <!-- Hero Section -->
     <section id="hero">
         <div class="container">
-            <h2>Data Science Portfolio</h2>
-            <p>Empowering Businesses with Data Solutions</p>
+<!--             <h2>Data Science Portfolio</h2>
+            <p>Empowering Businesses with Data Solutions</p> -->
+            <h2>Creative Work with a Data Core</h2>
+            <p>Blending Data, Design & Digital Culture</p>
         </div>
     </section>
 
@@ -88,8 +90,11 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Results-driven Data Science professional with expertise in Python, SQL, Tableau, and Power BI, specializing in exploratory data analysis (EDA), predictive modeling, and business intelligence. Proven ability to transform raw data into actionable insights through projects like COVID-19 unemployment trend analysis, interactive dashboards, and NLP-based hate speech detection.</p>
-                    <p>Strong foundation in deep learning (CNN, Transformers) and statistical modeling, complemented by certifications in AI, Business Analytics, and Excel. Passionate about solving real-world problems with data-driven solutions and delivering impactful visual storytelling.</p>
+<!--                     <p>Results-driven Data Science professional with expertise in Python, SQL, Tableau, and Power BI, specializing in exploratory data analysis (EDA), predictive modeling, and business intelligence. Proven ability to transform raw data into actionable insights through projects like COVID-19 unemployment trend analysis, interactive dashboards, and NLP-based hate speech detection.</p>
+                    <p>Strong foundation in deep learning (CNN, Transformers) and statistical modeling, complemented by certifications in AI, Business Analytics, and Excel. Passionate about solving real-world problems with data-driven solutions and delivering impactful visual storytelling.</p> -->
+                    <p>Creative analyst with a data backbone and a design brain. I work at the intersection of user behavior, storytelling, and systems; translating numbers into narratives that stick.</p>
+                    <p>Fluent in Python, SQL, Tableau, and Power BI. I’ve built dashboards that speak human, spotted trends before they peaked, and trained models to detect hate speech in the noise.</p>
+                    <p>My toolkit also includes deep learning (CNNs, Transformers), content strategy, and a soft obsession with making insights feel like good design. Always looking to bridge logic and intuition, with clean code, clean visuals, and a little bit of internet magic.</p>
                 </div>
                 <div class="about-image">
                     <img src="assets/swati.jpg" alt="Your Name" class="profile-img">
