--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#about">About</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="projects.html">Projects & Visuals</a></li>
                     <li><a href="#resume">Resume</a></li>
                     <li><a href="certificates.html">Certificates</a></li>
                     <li><a href="Research&Articles.html">Research & Articles</a></li>
