--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Projects | Swati Kushwaha</title>
+    <title>Projects & Visuals | Swati Kushwaha</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="index.html#about">About</a></li>
-                    <li><a href="projects.html" class="active">Projects</a></li>
+                    <li><a href="projects.html" class="active">Projects & Visuals</a></li>
                     <li><a href="index.html#resume">Resume</a></li>
                     <li><a href="certificates.html">Certificates</a></li>
                     <li><a href="Research&Articles.html">Research & Articles</a></li>
@@ -51,7 +51,7 @@
 
     <section id="projects" class="section">
         <div class="container">
-            <h2>All Projects</h2>
+            <h2>Featured Builds</h2>
             <div class="projects-grid">
                 <!-- Project 1 -->
                 <div class="project-card">
