--- a/projects.html
+++ b/projects.html
@@ -104,6 +104,30 @@
                 </div>
 
             </div>
+
+            <h2>Visual & Design Explorations</h2>
+            <div class="projects-grid">
+                <!-- Design Project 1 -->
+                <div class="project-card">
+                    <img src="assets/design_project_1.png" alt="Newsletter Redesign">
+                    <div class="project-content">
+                        <h3>Newsletter Revamp</h3>
+                        <p>Redesigned company newsletter using SendGrid to improve layout hierarchy and readability.</p>
+                        <a href="projects/newsletter-redesign.html" target="_blank" class="btn">View Design</a>
+                    </div>
+                </div>
+            
+                <!-- Design Project 2 (Optional/Future) -->
+                <div class="project-card">
+                    <img src="assets/design_project_2.png" alt="Placeholder">
+                    <div class="project-content">
+                        <h3>Instagram Carousel Templates</h3>
+                        <p>Crafted template kits on Canva aligning with music branding cues and digital culture tones.</p>
+                        <a href="#" class="btn">Coming Soon</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
