--- a/projects.html
+++ b/projects.html
@@ -105,20 +105,20 @@
 
             </div>
 
-            <h2>Visual & Design Explorations</h2>
-            <div class="projects-grid">
+<!--             <h2>Visual & Design Explorations</h2>
+            <div class="projects-grid"> -->
                 <!-- Design Project 1 -->
-                <div class="project-card">
+<!--                 <div class="project-card">
                     <img src="assets/design_project_1.png" alt="Newsletter Redesign">
                     <div class="project-content">
                         <h3>Newsletter Revamp</h3>
                         <p>Redesigned company newsletter using SendGrid to improve layout hierarchy and readability.</p>
                         <a href="projects/call-center-dashboard.html" target="_blank" class="btn">View Design</a>
                     </div>
-                </div>
+                </div> -->
             
                 <!-- Design Project 2 (Optional/Future) -->
-                <div class="project-card">
+<!--                 <div class="project-card">
                     <img src="assets/design_project_2.png" alt="Placeholder">
                     <div class="project-content">
                         <h3>Instagram Carousel Templates</h3>
@@ -126,7 +126,7 @@
                         <a href="#" class="btn">Coming Soon</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </section>
