--- a/projects.html
+++ b/projects.html
@@ -107,28 +107,28 @@
                 </div>
             </div>
 
-<!--             <h2>Visual & Design Explorations</h2>
-            <div class="projects-grid"> -->
-                <!-- Design Project 1 -->
-<!--                 <div class="project-card">
-                    <img src="assets/design_project_1.png" alt="Newsletter Redesign">
-                    <div class="project-content">
-                        <h3>Newsletter Revamp</h3>
-                        <p>Redesigned company newsletter using SendGrid to improve layout hierarchy and readability.</p>
-                        <a href="projects/call-center-dashboard.html" target="_blank" class="btn">View Design</a>
+            <h2>Visual & Design Explorations</h2>
+            <div class="projects-grid">
+                    <!-- Design Project 1 -->
+                    <div class="project-card">
+                        <img src="assets/Sweets.png" alt="Strawberry Delight Campaign">
+                        <div class="project-content">
+                            <h3>Strawberry Delight Campaign</h3>
+                            <p>A vibrant promotional design created to introduce a new strawberry ice cream flavour.</p>
+                            <a href="https://www.canva.com/design/DAGtgty87kk/0KkJAxQdW041w7w-uWOR7g/edit?utm_content=DAGtgty87kk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="btn">View Design</a>
+                        </div>
                     </div>
-                </div> -->
             
-                <!-- Design Project 2 (Optional/Future) -->
-<!--                 <div class="project-card">
-                    <img src="assets/design_project_2.png" alt="Placeholder">
-                    <div class="project-content">
-                        <h3>Instagram Carousel Templates</h3>
-                        <p>Crafted template kits on Canva aligning with music branding cues and digital culture tones.</p>
-                        <a href="#" class="btn">Coming Soon</a>
-                    </div>
-                </div>
-            </div> -->
+                    <!-- Design Project 2 (Optional/Future) -->
+<!--                     <div class="project-card">
+                        <img src="assets/design_project_2.png" alt="Placeholder">
+                        <div class="project-content">
+                            <h3>Instagram Carousel Templates</h3>
+                            <p>Crafted template kits on Canva aligning with music branding cues and digital culture tones.</p>
+                            <a href="#" class="btn">Coming Soon</a>
+                        </div>
+                    </div> -->
+            </div>
 
         </div>
     </section>
@@ -141,3 +141,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
