--- a/projects.html
+++ b/projects.html
@@ -119,15 +119,14 @@
                         </div>
                     </div>
             
-                    <!-- Design Project 2 (Optional/Future) -->
-<!--                     <div class="project-card">
-                        <img src="assets/design_project_2.png" alt="Placeholder">
+                    <div class="project-card">
+                        <img src="assets/Untitled design.png" alt="Celestial Mosaic">
                         <div class="project-content">
-                            <h3>Instagram Carousel Templates</h3>
-                            <p>Crafted template kits on Canva aligning with music branding cues and digital culture tones.</p>
-                            <a href="#" class="btn">Coming Soon</a>
+                            <h3>Celestial Mosaic</h3>
+                            <p>Fragments of sunset and dawn converge into a living stained-glass mural.</p>
+                            <a href="https://www.canva.com/design/DAGtgty87kk/0KkJAxQdW041w7w-uWOR7g/edit?utm_content=DAGtgty87kk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="btn">View Design</a>
                         </div>
-                    </div> -->
+                    </div>
             </div>
 
         </div>
@@ -141,4 +140,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
