--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,7 @@
                         <div class="project-content">
                             <h3>Strawberry Delight Campaign</h3>
                             <p>A vibrant promotional design created to introduce a new strawberry ice cream flavour.</p>
-                            <a href="https://www.canva.com/design/DAGtgty87kk/0KkJAxQdW041w7w-uWOR7g/edit?utm_content=DAGtgty87kk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="btn">View Design</a>
+                            <a href="https://www.canva.com/design/DAGtgty87kk/gi7tdbpvQyIGwN-sbwq_Fg/view?utm_content=DAGtgty87kk&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hc9ddc41095" target="_blank" class="btn">View Design</a>
                         </div>
                     </div>
                     
@@ -144,6 +144,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
