--- a/Research&Articles.html
+++ b/Research&Articles.html
@@ -63,6 +63,17 @@
                         <a href="https://medium.com/@swatikushwaha24032003/how-i-stumbled-and-googled-my-way-into-data-science-4be227d8bf5c" target="_blank" class="btn">Read Article</a>
                     </div>
                 </div>
+
+                <!-- Article 2 -->
+                <div class="project-card">
+                    <img src="assets/6960655.jpg" alt="Vector Image">
+                    <div class="project-content">
+                        <h3>Black Box vs. White Box Testing: What Startups Need to Know
+</h3>
+                        <p>Testing can feel overwhelming for non-technical startup founders, especially when time, talent, and budgets are stretched thin. That’s where CloudQA comes in: a powerful, no-code testing platform that turns black box testing into a seamless, scalable advantage.</p>
+                        <a href="https://cloudqa.io/black-box-vs-white-box-testing-what-startups-need-to-know/" target="_blank" class="btn">Read Article</a>
+                    </div>
+                </div>
                 
                 <!-- Certificate 2 -->
 <!--                 <div class="project-card">
