--- a/Research&Articles.html
+++ b/Research&Articles.html
@@ -66,7 +66,7 @@
 
                 <!-- Article 2 -->
                 <div class="project-card">
-                    <img src="assets/6960655.jpg" alt="Vector Image">
+                    <img src="assets/unnamed (1).jpg" alt="Vector Image">
                     <div class="project-content">
                         <h3>Black Box vs. White Box Testing: What Startups Need to Know
 </h3>
