--- a/Research&Articles.html
+++ b/Research&Articles.html
@@ -70,7 +70,7 @@
                     <div class="project-content">
                         <h3>Black Box vs. White Box Testing: What Startups Need to Know
 </h3>
-                        <p>Testing can feel overwhelming for non-technical startup founders, especially when time, talent, and budgets are stretched thin. That’s where CloudQA comes in: a powerful, no-code testing platform that turns black box testing into a seamless, scalable advantage.</p>
+                        <p>Testing can feel overwhelming for non-technical startup founders, especially when time, talent, and budgets are stretched thin. That’s where CloudQA comes in..</p>
                         <a href="https://cloudqa.io/black-box-vs-white-box-testing-what-startups-need-to-know/" target="_blank" class="btn">Read Article</a>
                     </div>
                 </div>
