--- a/Research&Articles.html
+++ b/Research&Articles.html
@@ -52,13 +52,13 @@
     <section id="projects" class="section">
         <div class="container">
             <h2>My Articles</h2>
-            <div class="projects-grid">
+            <div class="horizontal-scroll-wrapper">
+                <div class="projects-grid">
                 <!-- Article 1 -->
                 <div class="project-card">
                     <img src="assets/6960655.jpg" alt="Vector Image">
                     <div class="project-content">
-                        <h3>How I Stumbled (and Googled) My Way Into Data Science
-</h3>
+                        <h3>How I Stumbled (and Googled) My Way Into Data Science</h3>
                         <p>If you’re also floating around in the vast ocean of CSVs, models, and “what even is EDA?” — this article is for you.</p>
                         <a href="https://medium.com/@swatikushwaha24032003/how-i-stumbled-and-googled-my-way-into-data-science-4be227d8bf5c" target="_blank" class="btn">Read Article</a>
                     </div>
@@ -68,8 +68,7 @@
                 <div class="project-card">
                     <img src="assets/unnamed (1).jpg" alt="Vector Image">
                     <div class="project-content">
-                        <h3>Black Box vs. White Box Testing: What Startups Need to Know
-</h3>
+                        <h3>Black Box vs. White Box Testing: What Startups Need to Know</h3>
                         <p>Testing can feel overwhelming for non-technical startup founders, especially when time, talent, and budgets are stretched thin. That’s where CloudQA comes in..</p>
                         <a href="https://cloudqa.io/black-box-vs-white-box-testing-what-startups-need-to-know/" target="_blank" class="btn">Read Article</a>
                     </div>
@@ -94,6 +93,8 @@
                         <a href="https://certificates.simplicdn.net/share/4490759_1693770610.pdf" target="_blank" class="btn">View Certificate</a>
                     </div>
                 </div> -->
+            
+            
 
             </div>
         </div>
