--- a/Research&Articles.html
+++ b/Research&Articles.html
@@ -89,7 +89,7 @@
                         <img src="assets/Technical Debt img.png" alt="Vector Image">
                         <div class="project-content">
                             <h3>Technical Debt vs. Test Debt: Understanding Technical Debt and Its Impact on Software Development</h3>
-                            <p>Technical debt and test debt can quietly cripple a startup’s growth if left unmanaged. This article breaks down how both debts feed each other, the risks they pose to software quality and developer productivity, and how automated testing can help startups reduce long-term risk.</p>
+                            <p>Technical debt and test debt can quietly cripple a startup’s growth if left unmanaged. This article breaks down how both debts feed each other..</p>
                             <a href="https://cloudqa.io/black-box-vs-white-box-testing-what-startups-need-to-know/" target="_blank" class="btn">Read Article</a>
                         </div>
                     </div>  
